<resources>
    <string name="app_name">Frontend</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="search_map">Search map</string>
    <string name="location">location</string>
    <string name="profile1">Profile</string>
    <string name="profile_pic">profile_pic</string>
    <string name="max_mustermann">Max Mustermann</string>
    <string name="fullname">Fullname</string>
    <string name="fullname1">fullname</string>
    <string name="email">Email</string>
    <string name="email1">email</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number1">phone number</string>
    <string name="password">Password</string>
    <string name="password1">password</string>
    <string name="log_out">Log out</string>
    <string name="my_hobbies">My Hobbies</string>
    <string name="account_settings">Account Settings</string>
    <string name="personal_information">Personal Information</string>
    <string name="notification">Notification</string>
    <string name="security_settings">Security Settings</string>
    <string name="save">Save</string>
    <string-array name="players_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="home_welcome">Welcome to the Home Fragment</string>
</resources>